--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
     "roots/wordpress": "6.6.2",
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.1.0",
-    "wpackagist-theme/twentytwentythree": "^1.0"
+    "wpackagist-theme/twentytwentythree": "^1.0",
+    "wpackagist-plugin/woocommerce": "^9.3"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
